===================================
TSDuck Change Log and Release Notes
===================================

Version 3.9

- Added plugin mpe to extract MPE (Multi-Protocol Encapsulation) datagrams.

- Added options --sei-avc and --uuid-sei to plugin pes.

- Added options --add-programinfo-id, --set-stream-identifier, --set-cue-type
  and --set-data-broadcast-id to plugin pmt.

- Added signalization for data broadcast and MPE.

- Improved display of Dektec devices capabilities.

- Added option --default-charset to tsanalyze and plugin analyze.

- In all TSDuck commands, parameters can be read from a file using the syntax
  "@filename" anywhere in the command line. See the user's guide for details.

- Bug fix in tstables and plugin tables: When all sections were collected
  (option --all), the sections were not properly saved in binary section files
  (option --binary).

- Bug fix on Windows: Command "tsversion --upgrade" failed because tsversion.exe
  and tsduck.dll were locked by upgrade command.

- Added possibility to specify a GitHub authentication token in tsversion to
  avoid "API rate limit exceeded" errors.

- Precompiled binaries are now provided for Raspbian on Raspberry Pi.

Version 3.8-534

- Added options --source and --first-source to input plugin ip.

- Added option --periodic-bitrate to plugin bitrate_monitor.

- Added options --pid, --csv and --log to plugin pcrextract.

- Added XML support for more DVB and EACEM descriptors.

- When the output plugin "play" uses VLC, the player exits automatically at the
  end of the video playout.

- On macOS, the output plugin "play" now correctly detects VLC in its original
  installation path.

- Bug fix in the compilation of XML tables: when DVB strings were encoded with
  a character set different from ISO-6937 (the default character set), the
  table code was not correctly inserted at the beginning of the string.

- Bug fix in plugin bitrate_monitor. The message was incorrect when the bitrate